All_Component_DX/force-app/main/default/objects/Config_Change_Detail__c/Config_Change_Detail__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Capture config changes made by application for audit trail</description>
    <label>View ServiceMax Configuration Change</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>View ServiceMax Configuration Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>