All_Component_DX/force-app/main/default/objects/Config_Change_Detail__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Capture the details about what changes are made to ServiceMax Configuration</description>
    <label>Action</label>
    <type>TextArea</type>
</CustomField>