All_Component_DX/force-app/main/default/objects/Config_Change_Detail__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Type of action performed</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Modified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>