All_Component_DX/force-app/main/default/objects/Config_Change_Detail__c/fields/Additional_information__c.field-meta.xml
<CustomField>
    <fullName>Additional_information__c</fullName>
    <description>Capture warnings, errors</description>
    <label>Additional information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>