All_Component_DX/force-app/main/default/objects/Config_Change_Detail__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>Capture application which made the changes.</description>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ServiceMax Migration Tool</fullName>
            </value>
            <value>
                <fullName>ServiceMax Auto Configurator</fullName>
            </value>
            <value>
                <fullName>Browser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>