All_Component_DX/force-app/main/default/objects/Config_Change_Detail__c/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <description>ServiceMax Entity Identifier</description>
    <label>Entity Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto Entitlement Rules</fullName>
            </value>
            <value>
                <fullName>Configuration Profiles</fullName>
            </value>
            <value>
                <fullName>Counter Rule</fullName>
            </value>
            <value>
                <fullName>DC Views</fullName>
            </value>
            <value>
                <fullName>Install Base App Setup</fullName>
            </value>
            <value>
                <fullName>Inventory Process</fullName>
            </value>
            <value>
                <fullName>Mobile Configuration</fullName>
            </value>
            <value>
                <fullName>PM Process</fullName>
            </value>
            <value>
                <fullName>SFM Mobile Permissions</fullName>
            </value>
            <value>
                <fullName>SFM Search</fullName>
            </value>
            <value>
                <fullName>SFM Transactions</fullName>
            </value>
            <value>
                <fullName>SFM Wizards</fullName>
            </value>
            <value>
                <fullName>SPM</fullName>
            </value>
            <value>
                <fullName>Spare Parts</fullName>
            </value>
            <value>
                <fullName>Technical Attributes</fullName>
            </value>
            <value>
                <fullName>Timesheet</fullName>
            </value>
            <value>
                <fullName>IOT Configuration</fullName>
            </value>
            <value>
                <fullName>Device Mobile Configuration</fullName>
            </value>
            <value>
                <fullName>SFM Wizard Layout Configuration</fullName>
            </value>
            <value>
                <fullName>Org-wide Configuration</fullName>
            </value>
            <value>
                <fullName>Group-wide Configuration</fullName>
            </value>
            <value>
                <fullName>Expression</fullName>
            </value>
            <value>
                <fullName>SFM Data Validation Rules</fullName>
            </value>
            <value>
                <fullName>Object Mapping</fullName>
            </value>
            <value>
                <fullName>SFM Page Layout</fullName>
            </value>
            <value>
                <fullName>Trigger Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>