All_Component_DX/force-app/main/default/objects/Config_Change_Detail__c/fields/ServiceMax_Job__c.field-meta.xml
<CustomField>
    <fullName>ServiceMax_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to ServiceMax Job object</description>
    <label>ServiceMax Job</label>
    <referenceTo>SVMX_Jobs__c</referenceTo>
    <relationshipName>Config_Change_Details</relationshipName>
    <type>Lookup</type>
</CustomField>