All_Component_DX/force-app/main/default/objects/Config_Change_Detail__c/fields/SM_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>SM_Internal_ID__c</fullName>
    <label>Internal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>