All_Component_DX/force-app/main/default/objects/Config_Change_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>User__c</columns>
    <columns>Action__c</columns>
    <columns>Application__c</columns>
    <filterScope>Everything</filterScope>
    <label>ServiceMax Configurations Trail</label>
    <language>en_US</language>
</ListView>